[workspace]
members = ["eyelvl", "libsl-derive"]
exclude = ["tool/antlr4-rust-target/runtime/Rust"]

[package]
name = "libsl"
version = "0.1.0"
edition = "2024"

[dependencies]
antlr-rust = { path = "tool/antlr4-rust-target/runtime/Rust" }
libsl-derive = { path = "libsl-derive", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
slotmap = "1.0.7"

[features]
serde = ["dep:serde", "dep:libsl-derive"]

[dev-dependencies]
insta = { version = "1.42.2", features = ["glob", "ron"] }

# see https://github.com/rust-lang/cargo/issues/2911.
libsl = { path = ".", features = ["serde"] }
pathdiff = "0.2.3"

[[test]]
name = "parser-tests"
path = "tests/parser/main.rs"
